--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,27 @@ services:
       SESSION_COOKIE_SECURE: "on"
     links:
       - dispatcher:dispatcher
-  
   dispatcher:
     image: semtech/mu-dispatcher:2.1.0-beta.2
     links:
       - resource:resource
     volumes:
       - ./config/dispatcher:/config
-  
+  database:
+    image: semtech/mu-authorization:0.6.0-beta.8
+    environment:
+      MU_SPARQL_ENDPOINT: "http://triplestore:8890/sparql"
+      ERROR_ON_UNWRITTEN_DATA: "true"
+    volumes:
+      - ./config/authorization:/config
+    labels:
+      - "logging=true"
+  delta-notifier:
+    image: semtech/mu-delta-notifier:0.1.0
+    volumes:
+      - ./config/delta:/config
+    labels:
+      - "logging=true"
   triplestore:
     image: tenforce/virtuoso:1.3.2-virtuoso7.2.5.1
     environment:
@@ -23,11 +36,10 @@ services:
     volumes:
       - ./data/db:/data
       - ./config/virtuoso/virtuoso.ini:/data/virtuoso.ini
-  
   resource:
     image: semtech/mu-cl-resources:1.22.2
     links:
-      - triplestore:triplestore
+      - database:database
     volumes:
       - ./config/resources:/config
 
