--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.4"
 
 services:
   identifier:
@@ -7,14 +7,14 @@ services:
       SESSION_COOKIE_SECURE: "on"
     links:
       - dispatcher:dispatcher
-  
+
   dispatcher:
     image: semtech/mu-dispatcher:2.1.0-beta.2
     links:
       - resource:resource
     volumes:
       - ./config/dispatcher:/config
-  
+
   triplestore:
     image: tenforce/virtuoso:1.3.2-virtuoso7.2.5.1
     environment:
@@ -23,7 +23,7 @@ services:
     volumes:
       - ./data/db:/data
       - ./config/virtuoso/virtuoso.ini:/data/virtuoso.ini
-  
+
   resource:
     image: semtech/mu-cl-resources:1.22.2
     links:
@@ -34,7 +34,7 @@ services:
   producer:
     image: redpencil/fragmentation-producer:0.4.0
     environment:
-      BASE_URL: "http://data.lblod.info/ext"     
+      BASE_URL: "http://data.lblod.info/ext"
       FOLDER_DEPTH: 1
       PAGE_RESOURCES_COUNT: 10
       LDES_STREAM_PREFIX: "http://data.lblod.info/streams/lpdc/"
@@ -51,5 +51,4 @@ services:
       CRON_PATTERN: "*/30 * * * * *"
       LDES_STREAM: http://producer/example-stream
       LDES_ENDPOINT_VIEW: http://producer/example-stream/1
-      MU_SPARQL_ENDPOINT: "http://triplestore:8890/sparql" 
-
+      MU_SPARQL_ENDPOINT: "http://triplestore:8890/sparql"
